--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: latest
           scope: '@shaanmugapriya'
           registry-url: https://npm.pkg.github.com/
+          always-auth: true
       - run: npm -v
       - run: npm init -y
       - run: npm install
