--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - run: |
          echo //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN} > .npmrc
          echo @shaanmugapriya:registry=https://npm.pkg.github.com/ >> .npmrc
-         echo always-auth=false >> .npmrc
+         echo always-auth=true >> .npmrc
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GIT_TOKEN }}
