--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Print .npmrc
         run: cat $NPM_CONFIG_USERCONFIG
       - run: |
-         echo @shaanmugapriya:registry=https://npm.pkg.github.com/ > .npmrc
-         echo //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}>> .npmrc
+         echo //npm.pkg.github.com/:_authToken=${{ secrets.GIT_TOKEN }} > .npmrc
+         echo @shaanmugapriya:registry=https://npm.pkg.github.com/ >> .npmrc
          echo always-auth=true >> .npmrc
       - run: npm publish
       - run: npm config list
