--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: cat $NPM_CONFIG_USERCONFIG
       - run: |
          echo registry=https://npm.pkg.github.com/ > .npmrc
-         echo //npm.pkg.github.com/:_authToken=${{ secrets.GIT_TOKEN }} >> .npmrc
+         echo //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN} >> .npmrc
          echo always-auth=true >> .npmrc
       - run: npm publish
       - run: npm config list
