--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Print .npmrc
         run: cat $NPM_CONFIG_USERCONFIG
       - run: |
-         echo registry=https://npm.pkg.github.com/ > .npmrc
+         echo @shaanmugapriya:registry=https://npm.pkg.github.com/ > .npmrc
          echo //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN} >> .npmrc
          echo always-auth=true >> .npmrc
       - run: npm publish
